--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,11 +7,17 @@ Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Github: https://github.com/vaamonde
 Data de criação: 10/10/2021
-Data de atualização: 30/05/2022
-Versão: 0.66
+Data de atualização: 31/05/2022
+Versão: 0.67
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+31/05/2022 - Robson Vaamonde - Alteração dos scripts e arquivos de configuração do GLPI Help Desk, criado a estrutura
+para as versões: 9.5.x e 10.0.x, alterado o nome do script 17-glpi.sh para: 17-A-glpi9.sh utilizado na versão 9.5.x,
+criado a estrutura de diretórios: glpi9 e glpi10, alterado a localização do Path padrão do GLPI para as versões 9 e 10,
+alterado os arquivos de configuração do GLPI Help Desk para suportar HTTPS, criação das variáveis da versão 10 no 
+script: 00-parametros.sh.
+
 30/05/2022 - Robson Vaamonde - Alteração da variável: GUACAMOLERDEP para GUACAMOLEDEP no script: 00-parametros.sh,
 acréscimo das linhas de verificação da configuração dos arquivos do Apache2 nos scripts: 13-wordpress.sh, 16-loganalyzer.sh,
 17-glpi.sh e 19-zoneminder.sh, alteração da variável do laço de loop no script: 20-guacamole.sh, atualização dos 
