--- a/NEWS
+++ b/NEWS
@@ -7,11 +7,19 @@ Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Github: https://github.com/vaamonde
 Data de criação: 10/10/2021
-Data de atualização: 06/06/2022
+Data de atualização: 08/07/2022
 Versão: 0.20
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= CRIAÇÃO DE NOVOS SCRIPTS =============================================
+08/07/2022 - Robson Vaamonde - Estudos e criação do script: 00-iperf.sh e 00-speedtest.sh. Iperf é um software utilizado 
+para testar a largura de banda, podendo realizar injeção de pacotes para medir o desempenho de redes de computadores. 
+Ele não possui interface gráfica, necessitando de linha de comando. OpenSpeedTest é um aplicativo de teste de velocidade 
+de internet multiplataforma. Assim, você pode testar a velocidade da sua internet em vários navegadores da Web em 
+diferentes sistemas operacionais sem instalar nenhum aplicativo ou plug-in adicional (sem necessidade de Flash ou Java!). 
+Isso significa que você pode executar um teste de velocidade de banda larga através de qualquer dispositivo como iPhone, 
+iPad, Android, Windows, Linux, etc. (Qualquer Desktop, Laptop, Celular e Tablets).
+
 06/06/2022 - Robson Vaamonde - Estudos e criação do script: 00-rdiffweb.sh. O Rdiffweb é um software de gerenciamento
 de backup de código aberto que facilita a navegação e a restauração de arquivos por meio de navegação simplificada, 
 incluindo gerenciamento fácil do acesso do usuário.
