--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,11 +7,16 @@ Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Github: https://github.com/vaamonde
 Data de criação: 10/10/2021
-Data de atualização: 21/07/2022
-Versão: 0.74
+Data de atualização: 28/07/2022
+Versão: 0.75
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+28/07/2022 - Robson Vaamonde - Atualização do script: 00-parametros.sh, adicionado a dependência do NTP server no laço
+de loop do Netdata, adicionado os arquivos de configuração: ntpd.conf e netdata.conf, alterado o script: 15-netdata.sh
+acrescentado a edição do arquivo: ntpd.conf, alterado o script: 08-lamp.sh e 00-parametros.sh para resolver o BUG-022
+referente ao Webmin não acessar o MySQL.
+
 21/07/2022 - Robson Vaamonde - Atualização do arquivo de configuração: php.ini com as opções recomendadas do Wordpress,
 atualização do script: 13-wordpress.sh com as indicações de Temas e Plugins dos Docentes: José de Assis, Sirlene Sanches
 e do Profissional de TI Tales Wallef.
