--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,11 +7,14 @@ Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Github: https://github.com/vaamonde
 Data de criação: 10/10/2021
-Data de atualização: 31/07/2022
-Versão: 0.76
+Data de atualização: 09/08/2022
+Versão: 0.77
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+09/08/2022 - Robson Vaamonde - Atualização do script: 00-parametros.sh referente aos software: FusionInventory 9.5.4.2,
+Docker Compose 2.9.0, Rundeck 4.4.0, Nextcloud 24.0.3, Asterisk 19, Zabbix 6.2, OpenFire 4.7.3, OCS Invetory 2.10.
+
 31/07/2022 - Robson Vaamonde - Atualização do arquivo de configuração: pti.intra.hosts com o CNAME do Netdata, criação
 do arquivo de configuração: netdata-ssl.conf do Apache2 para suportar o Virtual Host do Netdata, Proxy e autenticação
 baseada no arquivo .htpasswd e utilização do TLS/SSL configurado do Apache2, alteração do arquivo de configuração do:
