--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,11 +7,15 @@ Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Github: https://github.com/vaamonde
 Data de criação: 10/10/2021
-Data de atualização: 19/09/2022
-Versão: 0.81
+Data de atualização: 25/09/2022
+Versão: 0.82
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+25/09/2022 - Robson Vaamonde - Atualização do script: 00-parametros.sh, adicionado a variável AGENTGLPIINSTALL10 com
+as opções da instalação das dependências dos Agentes do GLPI Help Desk v10.x, correção das dependências duplicadas
+do OCS Inventory e melhoria na indentação das bibliotecas do Perl, 
+
 19/09/2022 - Robson Vaamonde - Correção do caminho do PATH dos Agentes do GLPI no script: 17-B-glpi-10.sh, alteração
 da variável: $DOWNLOADAGENTGLPI, alteração do arquivo php.ini referente ao suporte a segurança de acesso ao GLPI na 
 versão 10.0.3 que exige a configuração da Sessão nas opções: session.cookie_secure = on e session.cookie_httponly = 
