--- a/FAQ
+++ b/FAQ
@@ -68,7 +68,7 @@ instalação Física ou Virtual (VM - Virtual Machine) ou em Cloud (nuvem) utili
 Private Server) ou Servidor Dedicado (dedicated server).
 
 Pergunta 011: Esse curso fornece Certificado de Conclusão?
-Respota: Não, todo o material está no Github: https://github.com/vaamonde/ubuntu-2004 e no Canal do
+Resposta: Não, todo o material está no Github: https://github.com/vaamonde/ubuntu-2004 e no Canal do
 YouTube do Bora para Prática: https://www.youtube.com/boraparapratica de forma "GRATUITA", sendo 
 apenas um curso de conceitos básicos até avançado na utilização do Ubuntu Server mais que segue um
 padrão apenas de documentação, não sendo um curso montado nos padrões acadêmicos.
