--- a/CHANGELOG
+++ b/CHANGELOG
@@ -22,7 +22,7 @@ do BUG: 0024 referente a falha do ZoneMinder de acesso ao Painel de Controle.
 19/09/2022 - Robson Vaamonde - Correção do caminho do PATH dos Agentes do GLPI no script: 17-B-glpi-10.sh, alteração
 da variável: $DOWNLOADAGENTGLPI, alteração do arquivo php.ini referente ao suporte a segurança de acesso ao GLPI na 
 versão 10.0.3 que exige a configuração da Sessão nas opções: session.cookie_secure = on e session.cookie_httponly = 
-on, atualização do arquivo: 00-parametros,sh com a nova versão do GLPI Help Desk v9.5.9.
+on, atualização do arquivo: 00-parametros.sh com a nova versão do GLPI Help Desk v9.5.9.
 
 14/09/2022 - Robson Vaamonde - Criação do arquivo: WARNING que tem o objetivo de explicar o uso de cada script dos
 serviços de rede se pode ou não ser instalado no mesmo servidor ou servidor dedicado, facilitando o uso dos scripts
@@ -45,7 +45,7 @@ adquiriu o Memtest86 PassMark. Alteração do arquivo de configuração: dhcpd.c
 para configurar o DNS Server apontando para o servidor Ubuntu Server. Alteração do arquivo de configuração do serviço
 do VSFTPd: vsftpd.allowed_users alterado os usuários do GLPI9 e GLPI10. Criação do script: 17-B-glpi-10.sh, alteração 
 do nome do script: 18-A-fusioninventory-9.sh pois foi lançado o suporte para o GLPI 10. Correção do caminho do script
-da criação da Base de Dados do Zabbix, caminho estava correto só no nome que alterou para: server.sql.gz.
+da criação da Base de Dados do Zabbix, caminho estava correto só o nome que alterou para: server.sql.gz.
 
 20/08/2022 - Robson Vaamonde - Criação do arquivo de configuração: grafana.ini, alteração do script: 21-grafana.sh com
 suporte para copiar o arquivo de configuração customizado do grafana.ini e editar o arquivo. Preparativos para a criação
@@ -75,7 +75,7 @@ e do Profissional de TI Tales Wallef.
 12/07/2022 - Robson Vaamonde - Atualização do script: 00-parametros.sh referente a criação da Base de Dados do Apache
 Guacamole, dependências do MySQL, Bind9 e Conector MySQL-Java, atualização do script: 20-guacamole.sh com as opções
 de criação do Banco de Dados e Conector MySQL-Java, atualização do arquivo de configuração: guacamole-properties com
-as opções de conexão com o Banco de Dados MySQL. Mudanças feito conforme o arquivo NEWS do dia: 03/02/2022
+as opções de conexão com o Banco de Dados MySQL. Mudanças feita conforme o arquivo NEWS do dia: 03/02/2022
 
 10/07/2022 - Robson Vaamonde - Atualização do arquivo de configuração: ntp.conf adicionado os endereços IPv4 dos
 servidores do NTP.br para resolver a falha do Bind9 em relação a data e hora errada e ocasionando as falhas de
