--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,11 +7,15 @@ Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Github: https://github.com/vaamonde
 Data de criação: 10/10/2021
-Data de atualização: 25/09/2022
-Versão: 0.82
+Data de atualização: 04/10/2022
+Versão: 0.83
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+04/10/2022 - Robson Vaamonde - Preparação do material de monitoramento do Microsoft Windows utilizando o agente do
+Prometheus Windows Exporter junto com o Netdata, criação do arquivo de configuração: wmi.conf. Preparação e testes 
+da configuração do Netdata Cloud.
+
 25/09/2022 - Robson Vaamonde - Atualização do script: 00-parametros.sh, adicionado a variável $AGENTGLPIINSTALL10 com
 as opções da instalação das dependências dos Agentes do GLPI Help Desk v10.x, correção das dependências duplicadas
 do OCS Inventory e melhoria na indentação das bibliotecas do Perl, criação das variáveis de download dos Agentes extra 
