--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,10 @@ Versão: 0.24
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= CRIAÇÃO DE NOVOS SCRIPTS =============================================
+28/11/2022 - Robson Vaamonde - Estudos e criação do script: 00-nodejs.sh. é um software de código aberto, 
+multiplataforma, baseado no interpretador V8 do Google e que permite a execução de códigos JavaScript fora de um 
+navegador web. A principal característica do Node.js é sua arquitetura assíncrona e orientada a eventos.
+
 27/10/2022 - Robson Vaamonde - Estudos e criação do script: 00-wazuh.sh. Wazuh uma plataforma de segurança gratuita 
 e de código aberto que unifica os recursos de XDR e SIEM, o que não apenas permite que as empresas detectem ameaças 
 sofisticadas, mas também pode ajudar imensamente na prevenção de violações e vazamentos de dados.
