--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,11 +7,15 @@ Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Github: https://github.com/vaamonde
 Data de criação: 10/10/2021
-Data de atualização: 05/10/2022
-Versão: 0.84
+Data de atualização: 04/12/2022
+Versão: 0.85
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+04/12/2022 - Robson Vaamonde - Atualização do script: 00-parametros.sh com mais uma dependência do Guacamole Server,
+melhoria na documentação do script: 20-guacamole.sh em relação a configuração dos recursos de conexão remota: VNC, 
+SSH, Telnet, RDP, melhoria no script: 15-netdata.sh em relação aos recursos de atualização do sistema.
+
 05/10/2022 - Robson Vaamonde - Atualização do script: 00-parametros.sh em relação a variável de instalação do CFTV
 ZoneMinder, alterado para a versão: MASTER que suportar a versão: 1.37.x, melhoria na documentação de configuração
 das câmeras de CFTV IPCam e IPWebCam.
